--- a/Index.html
+++ b/Index.html
@@ -133,7 +133,7 @@
         
         const masterSongs = [
             {id:"URUIcYDq3_I", s:145, d:15, singer:"陳奕迅", title:"陀飛輪", lyrics:"秒速🔴🔴🔴🔴 而皮膚🔴🔴🔴🔴🔴", ans:"秒速捉得緊了 而皮膚竟偷偷鬆了"},
-            {id:"scHDBckJXv4", s:135, d:15, singer:"古巨基", title:"必殺技", lyrics:"求你🔴🔴 錯過我 🔴🔴🔴🔴🔴", ans:"求你別要 錯過我 其實我也不錯"},
+            {id:"scHDBckJXv4", s:135, d:15, singer:"古巨基", title:"必殺技", lyrics:"求你🔴🔴 錯過我 🔴🔴🔴🔴🔴", ans:"求你別說 錯過我 其實亦愛我"},
             {id:"5wJFZBulzsI", s:131, d:14, singer:"張敬軒", title:"櫻花樹下", lyrics:"人置身🔴🔴🔴🔴 投入🔴🔴🔴🔴🔴", ans:"人置身這大時代 投入幾番競技賽"},
             {id:"E9BgBB0JQ8E", s:128, d:20, singer:"側田", title:"命硬", lyrics:"等🔴🔴🔴🔴🔴枯死", ans:"等荊棘滿途全枯死"},
             {id:"WJaufugjeSQ", s:86, d:26, singer:"楊千嬅", title:"小城大事", lyrics:"你何以🔴🔴🔴🔴🔴🔴", ans:"你何以雙眼好像流淚"},
@@ -167,7 +167,7 @@
         ];
 
         const r2Topics = ["失戀會聽的歌", "關於落雨的歌", "充滿正能量的歌", "兵歌", "關於旅行的歌"];
-        const r3Keywords = ["歌詞有人體部位 (手/眼/咀...)", "關於顏色 (你/我/他...)", "歌詞有愛字", "關於時間 (秒/分/鐘)", "關於天氣 (晴/雨/雲)"];
+        const r3Keywords = ["歌詞有人體部位 (手/眼/咀...)", "關於顏色 (紅/黑/白...)", "歌詞有愛字", "關於時間 (秒/分/鐘)", "關於天氣 (晴/雨/雲)"];
         let topicIdx = 0;
 
         function showRules(r) {
@@ -190,7 +190,8 @@
             if(currentRound === 1) {
                 document.getElementById('round1-content').style.display = 'block';
                 document.getElementById('generic-content').style.display = 'none';
-                idx = 0; loadVideo();
+                idx = 0; 
+                loadVideo();
             } else {
                 document.getElementById('round1-content').style.display = 'none';
                 document.getElementById('generic-content').style.display = 'block';
@@ -207,9 +208,11 @@
 
         /* --- Round 1 Logic --- */
         function onYouTubeIframeAPIReady() {}
+
         function loadVideo() {
             if(player) player.destroy();
             document.getElementById('round-info').innerText = `Song: ${idx + 1} / 32`;
+            document.getElementById('black-shield').style.display = 'flex'; // 載入新歌時確保遮罩存在
             player = new YT.Player('player-target', {
                 height: '100%', width: '100%', videoId: masterSongs[idx].id,
                 playerVars: { 'autoplay': 0, 'controls': 0, 'playsinline': 1, 'start': masterSongs[idx].s },
@@ -219,9 +222,12 @@
                 }}
             });
         }
+
         function syncStart() {
-            player.seekTo(masterSongs[idx].s, true); player.playVideo();
+            player.seekTo(masterSongs[idx].s, true); 
+            player.playVideo();
             document.getElementById('status-msg').innerText = "PLAYING...";
+            document.getElementById('black-shield').style.display = 'flex'; // 播放時維持遮罩
             document.getElementById('blanks').style.display = 'none';
             let elapsed = 0; let duration = masterSongs[idx].d;
             clearInterval(logicInt);
@@ -235,26 +241,37 @@
                 if(elapsed >= duration) { clearInterval(logicInt); finishClip(); }
             }, 1000);
         }
+
         function finishClip() {
-            player.pauseVideo(); document.getElementById('timer').innerText = "STOP";
+            player.pauseVideo(); 
+            document.getElementById('timer').innerText = "STOP";
             document.getElementById('timer').classList.remove('danger');
             document.getElementById('status-msg').innerText = "請作答";
             document.getElementById('red-dots-line').innerText = masterSongs[idx].lyrics;
             document.getElementById('blanks').style.display = 'block';
         }
+
         function rev(type) {
             const prefix = {singer: '歌手: ', title: '歌名: ', lyrics: ''};
             const val = type === 'lyrics' ? masterSongs[idx].ans : masterSongs[idx][type];
             document.getElementById('box-' + type).innerText = prefix[type] + val;
             document.getElementById('box-' + type).style.visibility = 'visible';
-            if(type === 'title') document.getElementById('black-shield').style.display = 'none';
+            
+            // 修改：只有當點擊「下一句」時，遮罩消失並繼續播放影片
+            if(type === 'lyrics') {
+                document.getElementById('black-shield').style.display = 'none';
+                player.playVideo();
+            }
         }
+
         function nextSong() {
-            idx++; if(idx >= masterSongs.length) { alert("Complete!"); goHome(); return; }
+            idx++; 
+            if(idx >= masterSongs.length) { alert("Complete!"); goHome(); return; }
             document.getElementById('black-shield').style.display = 'flex';
             document.getElementById('blanks').style.display = 'none';
             ['singer','title','lyrics'].forEach(t => document.getElementById('box-'+t).style.visibility='hidden');
-            document.getElementById('timer').innerText = "VS"; loadVideo();
+            document.getElementById('timer').innerText = "VS"; 
+            loadVideo();
         }
 
         /* --- Round 2 & 3 Logic --- */
@@ -264,6 +281,7 @@
             document.getElementById('timer-display').innerText = "10";
             document.getElementById('timer-display').style.color = "#ff4757";
         }
+
         function start10sTimer() {
             let count = 10;
             document.getElementById('timer-display').innerText = count;
@@ -273,6 +291,7 @@
                 if(count <= 0) { clearInterval(logicInt); document.getElementById('timer-display').innerText = "OUT"; }
             }, 1000);
         }
+
         function nextTopic() {
             const list = (currentRound === 2) ? r2Topics : r3Keywords;
             topicIdx = (topicIdx + 1) % list.length;
@@ -282,6 +301,7 @@
         function changeScore(id, amt) { 
             let el = document.getElementById(id); let s = parseInt(el.innerText) + amt; el.innerText = s < 0 ? 0 : s; 
         }
+
         function stopSong() { if(player) player.pauseVideo(); clearInterval(logicInt); }
         function replayLast() { if(player) { player.seekTo(masterSongs[idx].s + masterSongs[idx].d - 5); player.playVideo(); setTimeout(()=>player.pauseVideo(), 5000); } }
     </script>
