--- a/Index.html
+++ b/Index.html
@@ -133,7 +133,7 @@
         
         const masterSongs = [
             {id:"URUIcYDq3_I", s:145, d:15, singer:"陳奕迅", title:"陀飛輪", lyrics:"秒速🔴🔴🔴🔴 而皮膚🔴🔴🔴🔴🔴", ans:"秒速捉得緊了 而皮膚竟偷偷鬆了"},
-            {id:"scHDBckJXv4", s:135, d:15, singer:"古巨基", title:"必殺技", lyrics:"求你🔴🔴 錯過我 🔴🔴🔴🔴🔴", ans:"求你別說 錯過我 其實亦愛我"},
+            {id:"scHDBckJXv4", s:135, d:15, singer:"古巨基", title:"必殺技", lyrics:"求你🔴🔴 錯過我 🔴🔴🔴🔴🔴", ans:"求你別要 錯過我 其實我也不錯"},
             {id:"5wJFZBulzsI", s:131, d:14, singer:"張敬軒", title:"櫻花樹下", lyrics:"人置身🔴🔴🔴🔴 投入🔴🔴🔴🔴🔴", ans:"人置身這大時代 投入幾番競技賽"},
             {id:"E9BgBB0JQ8E", s:128, d:20, singer:"側田", title:"命硬", lyrics:"等🔴🔴🔴🔴🔴枯死", ans:"等荊棘滿途全枯死"},
             {id:"WJaufugjeSQ", s:86, d:26, singer:"楊千嬅", title:"小城大事", lyrics:"你何以🔴🔴🔴🔴🔴🔴", ans:"你何以雙眼好像流淚"},
